[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.0",
    "google-ai-generativelanguage==0.9.0",
    "google-api-core==2.28.1",
    "google-api-python-client==2.187.0",
    "google-auth==2.43.0",
    "google-auth-httplib2==0.2.1",
    "googleapis-common-protos==1.72.0",
    "ipykernel>=7.1.0",
    "langchain==1.0.5",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.0.4",
    "langchain-google-genai==3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.3",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.4",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.42",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "sentence-transformers>=5.1.2",
]
